[package]
name = "plopaf"
description = "Plot a PAF file to view alignments."
version = "0.1.1"
edition = "2021"
repository = "https://github.com/ARU-life-sciences/plopaf"

[dependencies]
anyhow = "1.0.89"
boomphf = "0.6.0"
clap = { version = "4.5.19", features = ["cargo"] }
itertools = "0.13.0"
paf = "0.1.12"
plotters = "0.3.7"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
